--- a/MetaLamp/lending-pool/plutus-starter.cabal
+++ b/MetaLamp/lending-pool/plutus-starter.cabal
@@ -30,6 +30,7 @@ library
       bytestring,
       containers,
       text,
+      data-default,
       freer-simple,
       freer-extras,
       prettyprinter,
