--- a/Dquadrant/stable-coin/frontend/package.json
+++ b/Dquadrant/stable-coin/frontend/package.json
@@ -10,28 +10,31 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.6.5",
+    "chart.js": "^2.9.4",
+    "core-js": "^3.14.0",
     "dotenv-webpack": "^3.0.0",
+    "fraction.js": "^4.1.1",
     "moment": "^2.29.1",
-    "vue": "^2.6.12",
-    "vue-router": "^3.4.5",
+    "vue": "^2.6.13",
+    "vue-chartjs": "^3.5.1",
+    "vue-router": "^3.5.1",
     "vue-toastr": "^2.1.2",
-    "vuex": "^3.5.1"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.6",
-    "@vue/cli-plugin-eslint": "^4.5.6",
-    "@vue/cli-service": "^4.5.6",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "babel-eslint": "^10.1.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.6.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "popper.js": "^1.16.0",
     "portal-vue": "^2.1.6",
-    "sass": "^1.26.11",
+    "sass": "^1.34.1",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-bootstrap-vue": "~0.6.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.13"
   },
   "eslintConfig": {
     "root": true,
