update nft use case to later version

--- a/eleks/nft/nft-market.cabal
+++ b/eleks/nft/nft-market.cabal
@@ -96,6 +96,7 @@ executable nft-market-pab
     text -any,
     containers -any,
     lens -any,
+    servant-client -any,
     plutus-contract -any,
     plutus-pab -any,
     nft-market -any,
