--- a/eleks/nft/cabal.project
+++ b/eleks/nft/cabal.project
@@ -28,45 +28,63 @@ source-repository-package
     prettyprinter-configurable
     quickcheck-dynamic
     word-array
-  tag: master
+  tag: 8c83c4abe211b4bbcaca3cdf1b2c0e38d0eb683f
 
--- The following sections are copied from the 'plutus' repository cabal.project at the revision
--- given above.
--- This is necessary because the  'plutus' libraries depend on a number of other libraries which are
--- not on Hackage, and so need to be pulled in as `source-repository-package`s themselves. Make sure to
--- re-update this section from the template when you do an upgrade.
+-- We never, ever, want this.
+write-ghc-environment-files: never
 
-package cardano-api
-  tests: false
+-- Always build tests and benchmarks.
+tests: true
+benchmarks: true
 
--- This is also needed so evenful-sql-common will build with a newer version of persistent.
-package eventful-sql-common
-  ghc-options: -XDerivingStrategies -XStandaloneDeriving -XUndecidableInstances -XDataKinds -XFlexibleInstances -XMultiParamTypeClasses
+-- The only sensible test display option
+test-show-details: streaming
 
 allow-newer:
-           -- Has a commit to allow newer aeson, not on Hackage yet
-           monoidal-containers:aeson
            -- Pins to an old version of Template Haskell, unclear if/when it will be updated
-           , size-based:template-haskell
-
-           -- The following three dependencies are needed by plutus.
-           , eventful-sql-common:persistent
-           , eventful-sql-common:persistent-template
+           size-based:template-haskell
            , ouroboros-consensus-byron:formatting
+           , beam-core:aeson
+           , beam-sqlite:aeson
+           , beam-sqlite:dlist
+           , beam-migrate:aeson
 
 constraints:
-  -- aws-lambda-haskell-runtime-wai doesn't compile with newer versions
-  aws-lambda-haskell-runtime <= 3.0.3
   -- big breaking change here, inline-r doens't have an upper bound
-  , singletons < 3.0
-  -- breaks eventful even more than it already was
-  , persistent-template < 2.12
+  singletons < 3.0
+  -- bizarre issue: in earlier versions they define their own 'GEq', in newer
+  -- ones they reuse the one from 'some', but there isn't e.g. a proper version
+  -- constraint from dependent-sum-template (which is the library we actually use).
+  , dependent-sum > 0.6.2.0
 
--- Drops an instance breaking our code. Should be released to Hackage eventually.
+-- See the note on nix/pkgs/default.nix:agdaPackages for why this is here.
+-- (NOTE this will change to ieee754 in newer versions of nixpkgs).
+extra-packages: ieee, filemanip
+
+-- These packages appear in our dependency tree and are very slow to build.
+-- Empirically, turning off optimization shaves off ~50% build time.
+-- It also mildly improves recompilation avoidance.
+-- For deve work we don't care about performance so much, so this is okay.
+package cardano-ledger-alonzo
+  optimization: False
+package ouroboros-consensus-shelley
+  optimization: False
+package ouroboros-consensus-cardano
+  optimization: False
+package cardano-api
+  optimization: False
+
+-- Turn off the tests for a while
+package plutus-metatheory
+  tests: False
+
+-- https://github.com/Quid2/flat/pull/22 fixes a potential exception
+-- when decoding invalid (e.g. malicious) text literals.
 source-repository-package
   type: git
-  location: https://github.com/Quid2/flat.git
-  tag: 95e5d7488451e43062ca84d5376b3adcc465f1cd
+  -- location: https://github.com/Quid2/flat.git
+  location: https://github.com/michaelpj/flat.git
+  tag: ee59880f47ab835dbd73bea0847dab7869fc20d8
 
 -- Needs some patches, but upstream seems to be fairly dead (no activity in > 1 year)
 source-repository-package
@@ -82,15 +100,18 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-crypto.git
-  tag: ce8f1934e4b6252084710975bd9bbc0a4648ece4
+  tag: 07397f0e50da97eaa0575d93bee7ac4b2b2576ec
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
-  tag: a715c7f420770b70bbe95ca51d3dec83866cb1bd
+  tag: cb0f19c85e5bb5299839ad4ed66af6fa61322cc4
   subdir:
+    base-deriving-via
     binary
     binary/test
+    measures
+    orphans-deriving-via
     slotting
     cardano-crypto-class
     cardano-crypto-praos
@@ -108,7 +129,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: e338f2cf8e1078fbda9555dd2b169c6737ef6774
+  tag: f149c1c1e4e4bb5bab51fa055e9e3a7084ddc30e
   subdir:
     monoidal-synchronisation
     typed-protocols
@@ -127,7 +148,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/iohk-monitoring-framework
-  tag: 34abfb7f4f5610cabb45396e0496472446a0b2ca
+  tag: 808724ff8a19a33d0ed06f9ef59fbd900b08553c
   subdir:
     iohk-monitoring
     tracer-transformers
@@ -141,7 +162,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-ledger-specs
-  tag: 09433fe537a4ab57df19e70be309c48d832f6576
+  tag: 12a0ef69d64a55e737fbf4e846bd8ed9fb30a956
   subdir:
     byron/chain/executable-spec
     byron/crypto
@@ -164,7 +185,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-node.git
-  tag: f72c6272eb58a43cd1d2ef4f4381f3822b3c60c6
+  tag: 3a56ac245c83d3345f81123ec3bb496bb23477a3
   subdir:
     cardano-api
     cardano-node
@@ -173,13 +194,18 @@ source-repository-package
 
 source-repository-package
   type: git
+  location: https://github.com/input-output-hk/optparse-applicative
+  tag: 7497a29cb998721a9068d5725d49461f2bba0e7a
+
+source-repository-package
+  type: git
   location: https://github.com/input-output-hk/Win32-network
-  tag: 94153b676617f8f33abe8d8182c37377d2784bd1
+  tag: 3825d3abf75f83f406c1f7161883c438dac7277d
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/hedgehog-extras
-  tag: 8bcd3c9dc22cc44f9fcfe161f4638a384fc7a187
+  tag: edf6945007177a638fbeb8802397f3a6f4e47c14
 
 source-repository-package
   type: git
