--- a/eleks/oracle/cabal.project
+++ b/eleks/oracle/cabal.project
@@ -28,40 +28,55 @@ source-repository-package
     prettyprinter-configurable
     quickcheck-dynamic
     word-array
-  --master
-  tag: 9bed81228b451bac2caf345930134e0c8e37fa71
+  tag: 8c83c4abe211b4bbcaca3cdf1b2c0e38d0eb683f
 
--- The following sections are copied from the 'plutus' repository cabal.project at the revision
--- given above.
--- This is necessary because the  'plutus' libraries depend on a number of other libraries which are
--- not on Hackage, and so need to be pulled in as `source-repository-package`s themselves. Make sure to
--- re-update this section from the template when you do an upgrade.
+-- We never, ever, want this.
+write-ghc-environment-files: never
 
-package cardano-api
-  tests: false
+-- Always build tests and benchmarks.
+tests: true
+benchmarks: true
 
--- This is also needed so evenful-sql-common will build with a newer version of persistent.
-package eventful-sql-common
-  ghc-options: -XDerivingStrategies -XStandaloneDeriving -XUndecidableInstances -XDataKinds -XFlexibleInstances -XMultiParamTypeClasses
+-- The only sensible test display option
+test-show-details: streaming
 
 allow-newer:
-           -- Has a commit to allow newer aeson, not on Hackage yet
-           monoidal-containers:aeson
            -- Pins to an old version of Template Haskell, unclear if/when it will be updated
-           , size-based:template-haskell
-
-           -- The following three dependencies are needed by plutus.
-           , eventful-sql-common:persistent
-           , eventful-sql-common:persistent-template
+           size-based:template-haskell
            , ouroboros-consensus-byron:formatting
+           , beam-core:aeson
+           , beam-sqlite:aeson
+           , beam-sqlite:dlist
+           , beam-migrate:aeson
 
 constraints:
-  -- aws-lambda-haskell-runtime-wai doesn't compile with newer versions
-  aws-lambda-haskell-runtime <= 3.0.3
   -- big breaking change here, inline-r doens't have an upper bound
-  , singletons < 3.0
-  -- breaks eventful even more than it already was
-  , persistent-template < 2.12
+  singletons < 3.0
+  -- bizarre issue: in earlier versions they define their own 'GEq', in newer
+  -- ones they reuse the one from 'some', but there isn't e.g. a proper version
+  -- constraint from dependent-sum-template (which is the library we actually use).
+  , dependent-sum > 0.6.2.0
+
+-- See the note on nix/pkgs/default.nix:agdaPackages for why this is here.
+-- (NOTE this will change to ieee754 in newer versions of nixpkgs).
+extra-packages: ieee, filemanip
+
+-- These packages appear in our dependency tree and are very slow to build.
+-- Empirically, turning off optimization shaves off ~50% build time.
+-- It also mildly improves recompilation avoidance.
+-- For deve work we don't care about performance so much, so this is okay.
+package cardano-ledger-alonzo
+  optimization: False
+package ouroboros-consensus-shelley
+  optimization: False
+package ouroboros-consensus-cardano
+  optimization: False
+package cardano-api
+  optimization: False
+
+-- Turn off the tests for a while
+package plutus-metatheory
+  tests: False
 
 -- https://github.com/Quid2/flat/pull/22 fixes a potential exception
 -- when decoding invalid (e.g. malicious) text literals.
@@ -133,7 +148,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/iohk-monitoring-framework
-  tag: 34abfb7f4f5610cabb45396e0496472446a0b2ca
+  tag: 808724ff8a19a33d0ed06f9ef59fbd900b08553c
   subdir:
     iohk-monitoring
     tracer-transformers
