split contract on modules

--- a/eleks/oracle/mutual-bet.cabal
+++ b/eleks/oracle/mutual-bet.cabal
@@ -29,7 +29,9 @@ library
       Contracts.Oracle.OffChain
       Contracts.Oracle
       Contracts.MutualBet
+      Contracts.MutualBet.Types
       Contracts.MutualBet.OffChain
+      Contracts.MutualBet.StateMachine
       Contracts.Types
       Pab.Game
     build-depends:
