--- a/mlabs/cabal.project
+++ b/mlabs/cabal.project
@@ -1,22 +1,22 @@
--- in-line with: e3e220f5434d5cc01d613e656dc661acbadd55a5
+-- in-line with: f653067a6a1b0e579f13df306dd5b345af040145
+-- 2021/09/16
 -- Keep this input-output-hk/plutus pinned with the one from plutus.
-index-state: 2021-07-07T00:00:00Z
+index-state: 2021-08-14T00:00:00Z
              
 packages: ./.
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/plutus.git
-  tag: 1f7a4dc63e521bcfa3fce0c50b1e39b0a78416bb
+  tag: f653067a6a1b0e579f13df306dd5b345af040145
   subdir: doc
           fake-pab
           freer-extras
           marlowe
           marlowe-actus
-          marlowe-dashboard-server
           marlowe-playground-server
+          marlowe-dashboard-server
           marlowe-symbolic
-          playground-common
           playground-common
           plutus-benchmark
           plutus-chain-index
@@ -35,6 +35,7 @@ source-repository-package
           quickcheck-dynamic
           web-ghc
           word-array
+          stubs/plutus-ghc-stub
 
 
 -- The following sections are copied from the 'plutus' repository cabal.project at the revision
@@ -55,19 +56,9 @@ benchmarks: true
 -- The only sensible test display option
 test-show-details: streaming
 
--- This is also needed so evenful-sql-common will build with a
--- newer version of persistent. See stack.yaml for the mirrored
--- configuration.
-package eventful-sql-common
-  ghc-options: -XDerivingStrategies -XStandaloneDeriving -XUndecidableInstances -XDataKinds -XFlexibleInstances -XMultiParamTypeClasses
-
 allow-newer:
            -- Pins to an old version of Template Haskell, unclear if/when it will be updated
            size-based:template-haskell
-
-           -- The following two dependencies are needed by plutus.
-           , eventful-sql-common:persistent
-           , eventful-sql-common:persistent-template
            , ouroboros-consensus-byron:formatting
            , beam-core:aeson
            , beam-sqlite:aeson
@@ -77,8 +68,6 @@ allow-newer:
 constraints:
   -- big breaking change here, inline-r doens't have an upper bound
   singletons < 3.0
-  -- breaks eventful even more than it already was
-  , persistent-template < 2.12
   -- bizarre issue: in earlier versions they define their own 'GEq', in newer
   -- ones they reuse the one from 'some', but there isn't e.g. a proper version
   -- constraint from dependent-sum-template (which is the library we actually use).
@@ -88,10 +77,24 @@ constraints:
 -- (NOTE this will change to ieee754 in newer versions of nixpkgs).
 extra-packages: ieee, filemanip
 
--- Drops an instance breaking our code. Should be released to Hackage eventually.
+-- These packages appear in our dependency tree and are very slow to build.
+-- Empirically, turning off optimization shaves off ~50% build time.
+-- It also mildly improves recompilation avoidance.
+-- For deve work we don't care about performance so much, so this is okay.
+package cardano-ledger-alonzo
+  optimization: False
+package ouroboros-consensus-shelley
+  optimization: False
+package ouroboros-consensus-cardano
+  optimization: False
+package cardano-api
+  optimization: False
+
+-- https://github.com/Quid2/flat/pull/22 fixes a potential exception
+-- when decoding invalid (e.g. malicious) text literals.
 source-repository-package
   type: git
-  location: https://github.com/michaelpj/flat.git
+  location: https://github.com/Quid2/flat.git
   tag: ee59880f47ab835dbd73bea0847dab7869fc20d8
 
 -- Needs some patches, but upstream seems to be fairly dead (no activity in > 1 year)
@@ -113,18 +116,18 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
-  tag: cb0f19c85e5bb5299839ad4ed66af6fa61322cc4
+  tag: 46502694f6a9f0498f822068008b232b3837a9e9
   subdir:
+    base-deriving-via
     binary
     binary/test
-    slotting
     cardano-crypto-class
     cardano-crypto-praos
     cardano-crypto-tests
-    strict-containers
     measures
-    base-deriving-via
     orphans-deriving-via
+    slotting
+    strict-containers
 
 source-repository-package
   type: git
@@ -137,7 +140,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: 877ce057ff6fb086474c8eaad53f2b7f0e0fce6b
+  tag: 6d00ff77f9bcd769fb6d7fd02216cec4e837bfcf
   subdir:
     monoidal-synchronisation
     typed-protocols
@@ -156,7 +159,17 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/iohk-monitoring-framework
-  tag: 808724ff8a19a33d0ed06f9ef59fbd900b08553c
+  -- Important Note: Read below, before changing this!
+  tag: 46f994e216a1f8b36fe4669b47b2a7011b0e153c
+  -- Are you thinking of updating this tag to some other commit?  Please
+  -- ensure that the commit you are about to use is the latest one from
+  -- the *develop* branch of this repo:
+  --   * <https://github.com/input-output-hk/iohk-monitoring-framework/commits/develop>
+  -- (not master!)
+  --
+  -- In particular we rely on the code from this PR:
+  --  * <https://github.com/input-output-hk/iohk-monitoring-framework/pull/622>
+  -- being merged.
   subdir:
     iohk-monitoring
     tracer-transformers
@@ -170,7 +183,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-ledger-specs
-  tag: d5b184a820853c7ba202efd615b8fadca1acb52c
+  tag: 8efcfc755faae4db3a64ad45343235fce3ed5c47
   subdir:
     byron/chain/executable-spec
     byron/crypto
@@ -193,7 +206,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-node.git
-  tag: ed11e8b6429d4af1cb2539460e5cb2283a06b2dc
+  tag: 8cf2b208c7708bd890c7e74d5b1d7c4167a3b40b
   subdir:
     cardano-api
     cardano-node
@@ -215,10 +228,8 @@ source-repository-package
   location: https://github.com/input-output-hk/hedgehog-extras
   tag: edf6945007177a638fbeb8802397f3a6f4e47c14
 
--- The following dependencies are not mirrored in the
--- stack.yaml file, but they are needed regardless by cabal.
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/goblins
   tag: cde90a2b27f79187ca8310b6549331e59595e7ba
-
+  
