--- a/use-case-2/common/common.cabal
+++ b/use-case-2/common/common.cabal
@@ -9,6 +9,7 @@ library
                , aeson-gadt-th
                , base
                , beam-core
+               , categories
                , constraints-extras
                , dependent-sum-template
                , mtl
