--- a/use-case-2/frontend/frontend.cabal
+++ b/use-case-2/frontend/frontend.cabal
@@ -28,8 +28,12 @@ library
                , vessel
   exposed-modules:
     Frontend
-    Frontend.Widgets
+    Frontend.ChooseWallet
+    Frontend.NavBar
+    Frontend.Pool
+    Frontend.Portfolio
     Frontend.WebsocketParse
+    Frontend.Widgets
   ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
 
 executable frontend
