--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -41,7 +41,26 @@ common lang
 library
     import: lang
     exposed-modules:
-      Plutus.Contracts.NftMarketplace.OnChain.Core Plutus.Contracts.NftMarketplace.OffChain.Serialization Ext.Plutus.PAB.Webserver.Server Plutus.Contracts.NftMarketplace.OffChain.ID Plutus.Contracts.NftMarketplace.OnChain.Core.ID Plutus.Contracts.Services.Sale.Core Plutus.Contracts.NftMarketplace.OnChain.Core.NFT Ext.Plutus.Contracts.Auction Plutus.Contracts.Services.Sale Plutus.Contracts.Services.Sale.Endpoints Plutus.Contracts.Services.Sale.StateMachine Plutus.Contracts.NftMarketplace.OffChain.Info Ext.Plutus.Ledger.Value Plutus.Contracts.NftMarketplace.OffChain.User Plutus.Abstract.ContractResponse Plutus.Contracts.NftMarketplace.Endpoints Plutus.Contracts.NftMarketplace.OffChain.Owner Plutus.Contracts.NftMarketplace.OnChain.Core.StateMachine Plutus.PAB.Simulation
+      Ext.Plutus.PAB.Webserver.Server
+      Ext.Plutus.Contracts.Auction
+      Ext.Plutus.Ledger.Value
+      Plutus.Contracts.NftMarketplace.OnChain.Core
+      Plutus.Contracts.NftMarketplace.OffChain.Serialization
+      Plutus.Contracts.NftMarketplace.OffChain.ID
+      Plutus.Contracts.NftMarketplace.OnChain.Core.ID
+      Plutus.Contracts.Services.Sale.Core
+      Plutus.Contracts.NftMarketplace.OnChain.Core.NFT
+      Plutus.Contracts.Services.Sale
+      Plutus.Contracts.Services.Sale.Endpoints
+      Plutus.Contracts.Services.Sale.StateMachine
+      Plutus.Contracts.NftMarketplace.OffChain.Info
+      Plutus.Contracts.NftMarketplace.OffChain.User
+      Plutus.Abstract.ContractResponse
+      Plutus.Contracts.NftMarketplace.Endpoints
+      Plutus.Contracts.NftMarketplace.OffChain.Owner
+      Plutus.Contracts.NftMarketplace.OnChain.Core.StateMachine
+      Plutus.PAB.Simulation
+      
     build-depends:
       base >= 4.9 && < 5,
       aeson,
@@ -116,7 +135,19 @@ test-suite test
     main-is: Main.hs
     hs-source-dirs: test
     other-modules:
-      Marketplace.Spec.Start Utils.Data Marketplace.Spec.Auction Marketplace.Fixtures.NFT Marketplace.Spec.Bundles Marketplace.Spec.Sale Utils.Trace Utils Marketplace.Fixtures.Wallet Marketplace.Fixtures Marketplace.Fixtures.CheckOptions Marketplace.Fixtures.Script Marketplace.Spec.CreateNft
+        Marketplace.Spec.Start
+        Marketplace.Spec.Auction
+        Marketplace.Fixtures.NFT
+        Marketplace.Spec.Bundles
+        Marketplace.Spec.Sale
+        Marketplace.Fixtures.Wallet
+        Marketplace.Fixtures
+        Marketplace.Fixtures.CheckOptions
+        Marketplace.Fixtures.Script
+        Marketplace.Spec.CreateNft
+        Utils
+        Utils.Trace
+        Utils.Data
     build-depends:
         plutus-core -any,
         plutus-tx -any,
