--- a/eleks/oracle/mutual-bet.cabal
+++ b/eleks/oracle/mutual-bet.cabal
@@ -86,6 +86,7 @@ test-suite plutus-example-projects-test
     base64-bytestring,
     bytestring,
     data-default,
+    foldl,
     freer-extras,
     freer-simple -any,
     lens -any,
