--- a/use-case-2/common/common.cabal
+++ b/use-case-2/common/common.cabal
@@ -10,6 +10,7 @@ library
                , base
                , beam-core
                , categories
+               , containers
                , constraints-extras
                , dependent-sum-template
                , mtl
