add payment key generate and import

--- a/dquadrant/nft/cardano-market.cabal
+++ b/dquadrant/nft/cardano-market.cabal
@@ -155,7 +155,8 @@ executable market-cli
       cardano-cli,
       cardano-api,
       filepath,
-      directory
+      directory,
+      containers
     , transformers
     , ouroboros-network
     , transformers-except
