--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -45,8 +45,8 @@ library
       Ext.Plutus.Contracts.Auction
       Ext.Plutus.Ledger.Value
       Plutus.Types.Percentage
-      Plutus.Types.Marketplace
       Plutus.Contracts.NftMarketplace.OnChain.Core
+      Plutus.Contracts.NftMarketplace.OnChain.Core.Marketplace
       Plutus.Contracts.NftMarketplace.OffChain.Serialization
       Plutus.Contracts.NftMarketplace.OffChain.ID
       Plutus.Contracts.NftMarketplace.OnChain.Core.ID
