--- a/mlabs/cabal.project
+++ b/mlabs/cabal.project
@@ -232,4 +232,9 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/goblins
   tag: cde90a2b27f79187ca8310b6549331e59595e7ba
-  
+
+source-repository-package 
+  type: git 
+  location: https://github.com/Liqwid-Labs/plutus-extra.git
+  tag: 8d6f921069e93853284920d39e539ecc15bf2cde
+  subdir: plutus-extra
