--- a/use-case-2/frontend/frontend.cabal
+++ b/use-case-2/frontend/frontend.cabal
@@ -26,6 +26,7 @@ library
                , unordered-containers
                , vector
                , vessel
+               , witherable
   exposed-modules:
     Frontend
     Frontend.ChooseWallet
