add contract resp monoid instance

--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -59,6 +59,8 @@ library
       servant-server,
       wai-cors,
       servant-options,
+      QuickCheck,
+      quickcheck-instances,
       -- Plutus:
       playground-common,
       plutus-contract,
@@ -116,7 +118,7 @@ test-suite test
     main-is: Main.hs
     hs-source-dirs: test
     other-modules:
-      Marketplace.Spec.Start Abstract.RemoteDataSpec Utils.Data Marketplace.Spec.Auction Marketplace.Fixtures.NFT Marketplace.Spec.Bundles Marketplace.Spec.Sale Utils.Trace Utils Marketplace.Fixtures.Wallet Marketplace.Fixtures Marketplace.Fixtures.CheckOptions Marketplace.Fixtures.Script Marketplace.Spec.CreateNft
+      Marketplace.Spec.Start Abstract.ContractRespSpec Abstract.RemoteDataSpec Utils.Data Marketplace.Spec.Auction Marketplace.Fixtures.NFT Marketplace.Spec.Bundles Marketplace.Spec.Sale Utils.Trace Utils Marketplace.Fixtures.Wallet Marketplace.Fixtures Marketplace.Fixtures.CheckOptions Marketplace.Fixtures.Script Marketplace.Spec.CreateNft
     build-depends:
         plutus-core -any,
         plutus-tx -any,
