--- a/eleks/oracle/games-web-app/package.json
+++ b/eleks/oracle/games-web-app/package.json
@@ -6,17 +6,23 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.1.1",
     "connected-react-router": "^6.9.1",
-    "history": "^5.0.1",
+    "history": "^4.10.1",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "react-toastify": "^8.0.2",
+    "recompose": "^0.30.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
