Refactor NFT - no StateMachine (#146)
* WIP: refactor

* WIP: compiling - yet not working as it should

* WIP: semigroup complaints

* WIP: update

* update: mint goes through

* wip: NFT prototyping (#149)

* update

* NFT-Rejig (#151)

* update: added human readable info

* update: typed Mint Parameters

* update: added extra params to MintParams

* update: intermediary aux functions

* wip: set price

* wip: set price error handling

* WIP: call not working

* wip: set ptice: trace hadlers usage fix

* WIP: buy just consumes

* update: some more logging

* WIP: preparing to merge

* update: format + lint

* update: remove needless parametrisation of validator

* WIP: validatorHash not being found?

* update: working transaction

* update: reformat and lint

* Buy Endpoint (#152)

* wip: set price

* wip: set price error handling

* WIP: call not working

* wip: set ptice: trace hadlers usage fix

* WIP: buy just consumes

* update: some more logging

* WIP: preparing to merge

* update: format + lint

* update: remove needless parametrisation of validator

* WIP: validatorHash not being found?

* update: working transaction

* update: reformat and lint

Co-authored-by: Mikhail Lazarev <mikhail@mlabs.city>

* update: Added hash function

* wip: NFT refactoring
- splitting to modules

* wip: NFT refactoring (#154)

- splitting to modules

* WIP: pre-merge commit

* wip: more precise datun search

* update: added hash back

* deleting accidentally pushed file

* update: datums check

* update: lint and reformat

* bugfix: don't use dot preprocessor

* update: added additional test

* update: sketched out new checks

* update: added buy tests

* update: Buy on-chain logic complete together with: linting, formatting, imports.

* wip: passing NFT currency symbol with redeemer

* put contant hashing back

* bugfix: merge error fixed

* wip: NFT validation
- 

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -90,6 +90,7 @@ common common-ghc-options
     -fno-strictness
     -fno-warn-orphans
     -fobject-code
+--    -fplugin-opt PlutusTx.Plugin:defer-errors -- do not use for build 
 
 library
   import:  common-imports
@@ -152,6 +153,9 @@ library
     Mlabs.System.Console.PrettyLogger
     Mlabs.System.Console.Utils
     Mlabs.Utils.Wallet 
+    Mlabs.NFT.Types
+    Mlabs.NFT.Contract
+    Mlabs.NFT.Validation
 
 executable mlabs-plutus-use-cases
   import:  common-imports
@@ -166,6 +170,8 @@ executable deploy-app
   import:  common-imports
   import:  common-language
   import:  common-configs
+  import:  common-ghc-options
+
   main-is: deploy-app/Main.hs
   build-depends: 
       mlabs-plutus-use-cases
@@ -177,31 +183,36 @@ executable deploy-app
 executable nft-demo
   import:  common-imports
   import:  common-language
+  import:  common-configs
   import:  common-ghc-options  
+
   main-is: nft-demo/Main.hs
   build-depends: mlabs-plutus-use-cases
 
 executable governance-demo
   import:  common-imports
   import:  common-language
+  import:  common-configs
   import:  common-ghc-options  
+
   main-is: governance-demo/Main.hs
-  build-depends: 
-      mlabs-plutus-use-cases
+  build-depends: mlabs-plutus-use-cases
 
 executable lendex-demo
   import:  common-imports
   import:  common-language
   import:  common-configs
   import:  common-ghc-options  
+
   main-is: lendex-demo/Main.hs
   build-depends: mlabs-plutus-use-cases
 
 Test-suite mlabs-plutus-use-cases-tests
-  import:          common-imports
-  import:          common-language
-  import:          common-configs
+  import:  common-imports
+  import:  common-language
+  import:  common-configs
   import:  common-ghc-options  
+
   Type:            exitcode-stdio-1.0
   hs-source-dirs:  test
   Main-is:         Main.hs
@@ -254,6 +265,7 @@ Test-suite mlabs-plutus-use-cases-tests
     Test.Nft.Init
     Test.Nft.Logic
     Test.Utils
+    Test.NFT.Trace
                      
   default-extensions:
     RecordWildCards
