Update plutus to 58c09 (#165)
* Update plutus-extra

* Update plutus: cabal.project

* Add cardano-wallet, cardano-addresses niv sources

* Change cardano-ledger-specs GH owner

* Set niv source revisions to cabal.project tags

* Add OpenApi.ToSchema instances

* Add more OpenApi.ToSchema instances

* formatting

Co-authored-by: cstml <cstmlcodes@gmail.com>

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -18,6 +18,7 @@ common common-imports
     , extra
     , freer-simple
     , mtl
+    , openapi3
     , playground-common
     , plutus-core
     , plutus-contract
