--- a/mlabs/cabal.project
+++ b/mlabs/cabal.project
@@ -8,41 +8,41 @@ packages: ./.
 source-repository-package
   type: git
   location: https://github.com/Liqwid-Labs/plutus-extra.git
-  tag: 8d6f921069e93853284920d39e539ecc15bf2cde
+  tag: c2079131a2a138d0895282e26d6cdd16cd65c649
   subdir: plutus-extra
+
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/plutus.git
-  tag: f653067a6a1b0e579f13df306dd5b345af040145
-  subdir: doc
-          fake-pab
-          freer-extras
-          marlowe
-          marlowe-actus
-          marlowe-playground-server
-          marlowe-dashboard-server
-          marlowe-symbolic
-          playground-common
-          plutus-benchmark
-          plutus-chain-index
-          plutus-contract
-          plutus-core
-          plutus-errors
-          plutus-ledger
-          plutus-ledger-api
-          plutus-metatheory
-          plutus-pab
-          plutus-playground-server
-          plutus-tx
-          plutus-tx-plugin
-          plutus-use-cases
-          prettyprinter-configurable
-          quickcheck-dynamic
-          web-ghc
-          word-array
-          stubs/plutus-ghc-stub
-
+  subdir:
+    doc
+    fake-pab
+    freer-extras
+    marlowe
+    marlowe-dashboard-server
+    marlowe-symbolic
+    playground-common
+    plutus-benchmark
+    plutus-chain-index
+    plutus-contract
+    plutus-core
+    plutus-errors
+    plutus-ledger
+    plutus-ledger-api
+    plutus-metatheory
+    plutus-pab
+    plutus-playground-server
+    plutus-tx
+    plutus-tx-plugin
+    plutus-use-cases
+    prettyprinter-configurable
+    quickcheck-dynamic
+    web-ghc
+    word-array
+    stubs/plutus-ghc-stub
+  -- Update plutus revision here! Make sure this matches `cat ./nix/sources.json | jq '.plutus.rev'`
+  tag: 58c093a49eb7a369865e361179d649264fc817a4
 
 -- The following sections are copied from the 'plutus' repository cabal.project at the revision
 -- given above.
@@ -52,7 +52,7 @@ source-repository-package
 
 ---------- *replace here* ----------------------------------------------------------------------
 
--- We never, ever, want this.
+-- You never, ever, want this.
 write-ghc-environment-files: never
 
 -- Always build tests and benchmarks.
@@ -60,7 +60,7 @@ tests: true
 benchmarks: true
 
 -- The only sensible test display option
-test-show-details: streaming
+test-show-details: direct
 
 allow-newer:
            -- Pins to an old version of Template Haskell, unclear if/when it will be updated
@@ -122,17 +122,17 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
-  tag: 46502694f6a9f0498f822068008b232b3837a9e9
+  tag: 592aa61d657ad5935a33bace1243abce3728b643
   subdir:
     base-deriving-via
     binary
     binary/test
-    cardano-crypto-class
-    cardano-crypto-praos
-    cardano-crypto-tests
     measures
     orphans-deriving-via
     slotting
+    cardano-crypto-class
+    cardano-crypto-praos
+    cardano-crypto-tests
     strict-containers
 
 source-repository-package
@@ -145,8 +145,26 @@ source-repository-package
 
 source-repository-package
   type: git
+  location: https://github.com/input-output-hk/cardano-addresses
+  tag: d2f86caa085402a953920c6714a0de6a50b655ec
+  subdir:
+    core
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-wallet
+  tag: ae7569293e94241ef6829139ec02bd91abd069df
+  subdir:
+    lib/text-class
+    lib/strict-non-empty-containers
+    lib/core
+    lib/test-utils
+    lib/numeric
+
+source-repository-package
+  type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: 6d00ff77f9bcd769fb6d7fd02216cec4e837bfcf
+  tag: 5d37a927046bc7da2887830d8e35cf604622ce09
   subdir:
     monoidal-synchronisation
     typed-protocols
@@ -161,6 +179,7 @@ source-repository-package
     io-sim
     io-classes
     network-mux
+    ntp-client
 
 source-repository-package
   type: git
@@ -188,8 +207,8 @@ source-repository-package
 
 source-repository-package
   type: git
-  location: https://github.com/input-output-hk/cardano-ledger-specs
-  tag: 8efcfc755faae4db3a64ad45343235fce3ed5c47
+  location: https://github.com/raduom/cardano-ledger-specs
+  tag: ef6bb99782d61316da55470620c7da994cc352b2
   subdir:
     byron/chain/executable-spec
     byron/crypto
@@ -198,6 +217,7 @@ source-repository-package
     byron/ledger/impl
     byron/ledger/impl/test
     semantics/executable-spec
+    cardano-protocol-tpraos
     semantics/small-steps-test
     shelley/chain-and-ledger/dependencies/non-integer
     shelley/chain-and-ledger/executable-spec
@@ -212,7 +232,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-node.git
-  tag: 8cf2b208c7708bd890c7e74d5b1d7c4167a3b40b
+  tag: 191b91eec3c7d845a55347781329d50bf36871d7
   subdir:
     cardano-api
     cardano-node
