update to the new version , minor fix of game server

--- a/eleks/oracle/mutual-bet.cabal
+++ b/eleks/oracle/mutual-bet.cabal
@@ -39,10 +39,12 @@ library
       bytestring,
       base64-bytestring,
       cardano-api -any,
+      cardano-crypto -any,
+      containers -any,
       data-default -any,
       text -any,
       lens -any,
-      containers -any,
+      openapi3 -any,
       semigroups -any,
       serialise,
       playground-common,
@@ -108,10 +110,12 @@ executable bet-pab
     base >= 4.9 && < 5,
     bytestring,
     base64-bytestring,
+    containers -any,
     data-default -any,
     text -any,
-    containers -any,
     lens -any,
+    openapi3 -any,
+    playground-common,
     plutus-contract -any,
     plutus-pab -any,
     mutual-bet,
