--- a/mlabs/cabal.project
+++ b/mlabs/cabal.project
@@ -10,7 +10,7 @@ source-repository-package
   location: https://github.com/Liqwid-Labs/plutus-extra.git
   tag: c2079131a2a138d0895282e26d6cdd16cd65c649
   subdir: plutus-extra
-
+          tasty-plutus
 
 source-repository-package
   type: git
