--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -268,10 +268,10 @@ Test-suite mlabs-plutus-use-cases-tests
     Test.Nft.Logic
     Test.Utils
     Test.NFT.Trace
-    Test.NFT.Main
-    Test.NFT.Dealing
-    Test.NFT.Minting
-    Test.NFT.Values
+    Test.NFT.Script.Main
+    Test.NFT.Script.Dealing
+    Test.NFT.Script.Minting
+    Test.NFT.Script.Values
 
   default-extensions:
     RecordWildCards
