--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -41,7 +41,6 @@ common lang
 library
     import: lang
     exposed-modules:
-      Ext.Plutus.Contracts.Auction
       Ext.Plutus.Ledger.Value
       Ext.Plutus.PAB.Webserver.Server
       Plutus.Abstract.ContractResponse
@@ -59,6 +58,10 @@ library
       Plutus.Contracts.NftMarketplace.OnChain.Core.Marketplace
       Plutus.Contracts.NftMarketplace.OnChain.Core.NFT
       Plutus.Contracts.NftMarketplace.OnChain.Core.StateMachine
+      Plutus.Contracts.Services.Auction
+      Plutus.Contracts.Services.Auction.Core
+      Plutus.Contracts.Services.Auction.Endpoints
+      Plutus.Contracts.Services.Auction.StateMachine
       Plutus.Contracts.Services.Sale
       Plutus.Contracts.Services.Sale.Core
       Plutus.Contracts.Services.Sale.Endpoints
