--- a/dquadrant/nft/cardano-market.cabal
+++ b/dquadrant/nft/cardano-market.cabal
@@ -150,6 +150,9 @@ executable market-cli
   hs-source-dirs: cli
   ghc-options:  -threaded -rtsopts "-with-rtsopts=-T"
   default-language: Haskell2010
+  other-modules:
+    Error
+    TxUtils
   build-depends:
       cardano-market,
       cardano-cli,
