issue 157 compiler flags - styleguide compliance flags added, errors fixed - bunch of Eq instances for Lendex added - minor refactoring

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -101,6 +101,12 @@ library
                   
   Ghc-Options:
     -Wall
+    -Wcompat
+    -Wincomplete-uni-patterns
+    -Wredundant-constraints
+    -Wmissing-export-lists
+    -Wmissing-deriving-strategies
+    -Werror
     -fplugin=RecordDotPreprocessor
     
   hs-source-dirs:
