--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -79,10 +79,11 @@ library
       memory,
       prettyprinter,
       semigroups,
-      -- servant-options,
+      servant-options,
       servant-server,
       text,
       wai-cors,
+      openapi3 -any,
       -- Plutus:
       playground-common,
       plutus-contract,
