--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -272,7 +272,9 @@ Test-suite mlabs-plutus-use-cases-tests
     Test.Nft.Init
     Test.Nft.Logic
     Test.Utils
+    Test.NFT.Init
     Test.NFT.Trace
+    Test.NFT.Contract
                      
   default-extensions:
     RecordWildCards
