NFT: Add QuickCheck test for contract

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -275,6 +275,7 @@ Test-suite mlabs-plutus-use-cases-tests
     Test.NFT.Init
     Test.NFT.Trace
     Test.NFT.Contract
+    Test.NFT.QuickCheck
                      
   default-extensions:
     RecordWildCards
