update nft version

--- a/eleks/nft/nft-market.cabal
+++ b/eleks/nft/nft-market.cabal
@@ -33,9 +33,10 @@ library
       aeson,
       bytestring,
       base64-bytestring,
+      containers -any,
       text -any,
       lens -any,
-      containers -any,
+      openapi3 -any,
       playground-common,
       plutus-contract,
       plutus-tx-plugin,
@@ -96,6 +97,7 @@ executable nft-market-pab
     text -any,
     containers -any,
     lens -any,
+    openapi3 -any,
     servant-client -any,
     plutus-contract -any,
     plutus-pab -any,
